--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /V8_Virtual_Keyword_Practice/VirtualKeywordPractice/obj
 /V7_V8_Inheritance_Practice/InheritancePrac/obj
 /V5_V6- Static Keyword_Singleton/StaticKeyword/obj
+/V13_14_15_16_Delegates_AnonFunc_LambdaExp/DelegatesLearning/obj
+/V13_14_15_16_Delegates_AnonFunc_LambdaExp/DelegatesLearning/bin
